@@ -1,3 +1,9 @@
+linuxmuster-prepare (0.4.1-0ubuntu0) lmn7-testing; urgency=low
+
+  * added quota support for server profile.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 25 Feb 2018 14:11:47 +0100
+
 linuxmuster-prepare (0.4.0-0ubuntu0) lmn7-testing; urgency=low
 
   * added opsi support.
